<resources>
    <string name="app_name">Need A Car</string>

    <!-- MemberShip -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password (Again)</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
</resources>