<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:menuCategory="secondary"
        android:title="@string/home"/>
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_calendar"
        android:menuCategory="secondary"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notification"
        android:menuCategory="secondary"
        android:title="@string/notification"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user"
        android:menuCategory="secondary"
        android:title="@string/profile"/>
</menu>