<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/general_bg_color"
        android:padding="@dimen/margin_m">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAppearance="@style/MediumTextAppearance.Bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s"
            android:text="@string/sign_up"
            android:textAppearance="@style/MediumTextAppearance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_login"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:paddingHorizontal="@dimen/_4sdp"
            android:hint="@string/username"
            android:textAppearance="@style/MediumTextAppearance"
            android:background="@drawable/bg_edit_text_bottom_line"
            android:elevation="10dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_text_password"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/margin_s"
            android:paddingHorizontal="@dimen/_4sdp"
            android:textAppearance="@style/MediumTextAppearance"
            android:hint="@string/password"
            android:background="@drawable/bg_edit_text_bottom_line"
            android:elevation="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_username"
            app:layout_constraintBottom_toTopOf="@id/edit_text_password_again"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_password_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/margin_s"
            android:paddingHorizontal="@dimen/_4sdp"
            android:hint="@string/password_again"
            android:textAppearance="@style/MediumTextAppearance"
            android:background="@drawable/bg_edit_text_bottom_line"
            android:elevation="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAppearance="@style/MediumTextAppearance"
            app:layout_constraintTop_toTopOf="@id/button_continue"
            app:layout_constraintBottom_toBottomOf="@id/button_continue"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/button_continue"
            android:layout_width="@dimen/height_button_m"
            android:layout_height="@dimen/height_button_s"
            android:background="@drawable/bg_rectangle_alizarin"
            android:elevation="10dp"
            app:lottie_rawRes="@raw/right_arrows"
            app:lottie_loop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>